# tether-artnet-controller

./: .gitignore  Cargo.toml  README.md  breathlab.json  build.rs  dist-workspace.toml  example.hires.json  example.project.json  project.json  tether-egui-testing.json
.github/workflows/: release.yml
fixtures/: ADJ_Vizi_Hex_Wash7.json  Aputure INFINIMAT.json  Cameo_Opus_S5.json  Fusion_X_Par_12Z.json  Fusion_X_Par_18Z.json  GLP_Impression_X5.json  Godox_Knowled_F400Bi.json  Godox_Knowled_F600Bi.json  JB_Lighting_P10_Profile.json  SHEHDS_LED_Flat_PAR_12x3W_RGBW.json  Varytec_HERO_340FX.json
src/: all_fixtures.json  animation.rs  artnet.rs  main.rs  model.rs  project.rs  settings.rs  tether_interface.rs  ui.rs
src/project/: artnetconfig.rs  fixture.rs  midiconfig.rs  mod.rs  scene.rs
src/ui/: fixture_controls.rs  macro_controls.rs  mod.rs  network_controls.rs  scenes.rs
wix/: main.wxs
