[package]
name = "tether-artnet-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tether-agent = "0.12.1"
artnet_protocol = "0.4.1"
tween = "2.0.0"
rand = "0.8.5"
clap = { version = "4.1.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
rmp-serde = "1.1.1"
eframe = "0.22.0"
egui = { version = "0.22.0", features = ["persistence"] }
anyhow = "1.0.75"
rfd = "0.12.1"


