[package]
name = "tether-artnet-controller"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/RandomStudio/tether-artnet-controller"
authors = ["Stephen Buchanan"]
description= "A remote control software lighting desk"
license = "MIT"

[package.metadata.wix]
upgrade-guid = "8E5F37FF-2FE0-464D-B307-5F64A0466ACF"
path-guid = "87AAF93E-3AEB-44BA-8820-64AF53491A88"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tether-agent = "0.12.1"
artnet_protocol = "0.4.1"
tween = "2.0.0"
rand = "0.8.5"
clap = { version = "4.1.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
rmp-serde = "1.1.1"
eframe = "0.22.0"
egui = { version = "0.22.0", features = ["persistence"] }
anyhow = "1.0.75"
rfd = "0.12.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

[workspace.metadata.dist.dependencies.apt]
librust-atk-dev = "*"
libgtk-3-dev = "*"

